--- a/front/package.json
+++ b/front/package.json
@@ -8,19 +8,14 @@
     ]
   },
   "scripts": {
+    "web": "yarn workspace web start",
     "android": "yarn workspace mobile android",
     "compile": "tsc -b --incremental",
-    "ios": "yarn workspace mobile  ios",
+    "ios": "yarn workspace mobile ios",
     "studio": "yarn workspace mobile studio",
     "xcode": "yarn workspace mobile xcode"
   },
   "dependencies": {
-    "react-native": "0.61.3"
-  },
-  "devDependencies": {
-    "@types/react": "16.9.11",
-    "@types/react-native": "0.60.22",
-    "concurrently": "5.0.0",
-    "typescript": "3.6.4"
+    "react-native": "0.61.5"
   }
 }
