--- a/front/packages/mobile/package.json
+++ b/front/packages/mobile/package.json
@@ -14,16 +14,14 @@
     "xcode": "open ios/myprojectname.xcworkspace"
   },
   "dependencies": {
-    "components": "0.0.1",
-    "react": "16.11.0",
-    "react-native": "0.61.3"
+    "core": "0.0.0",
+    "react": "16.12.0",
+    "react-native": "0.61.5"
   },
   "devDependencies": {
-    "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
-    "eslint": "6.6.0",
     "jest": "24.9.0",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.12.0"
   },
   "jest": {
     "preset": "react-native"
