--- a/front/packages/web/package.json
+++ b/front/packages/web/package.json
@@ -2,13 +2,6 @@
   "name": "web",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "react": "16.9.0",
-    "react-art": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native-web": "0.11.7",
-    "react-scripts": "3.1.1"
-  },
   "scripts": {
     "start": "react-app-rewired start",
     "prebuild": "npm run compile",
@@ -26,10 +19,15 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "dependencies": {
+    "react": "16.12.0",
+    "react-art": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-native-web": "0.11.7",
+    "react-scripts": "3.3.0"
+  },
   "devDependencies": {
     "babel-plugin-react-native-web": "0.11.7",
-    "concurrently": "5.0.0",
-    "react-app-rewired": "2.1.4",
-    "typescript": "3.6.4"
+    "react-app-rewired": "2.1.5"
   }
 }
